ice_cream/service.yml
apiVersion: v1
kind: Service
metadata:
  name: icecream-app
  labels:
    app: icecream-app
spec:
  selector:
    app: icecream-app
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: LoadBalancer
